# offside-detection

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  main.py  pipeline.py
src/detection/: base.py  yolo_detector.py
src/models/: detection.py  offside.py  pose.py  team.py  vanishing_point.py
src/offside/: __init__.py  calculator.py
src/perspective/: base.py  field_vanishing_point.py
src/pose/: __init__.py  base.py  mediapipe_pose_estimator.py  yolo_pose_estimator.py
src/team/: base.py  color_features.py  kmeans_classifier.py
src/utils/: image.py  json_io.py
src/visualize/: draw_offside.py  draw_pose.py  draw_teams.py  draw_vanishing_point.py
