[project]
name = "offside-detection"
version = "0.1.0"
description = "Football analytics pipeline for player detection using YOLO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
offside-detect = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
